// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/router-base-ce render base route data snap 1`] = `
[
  {
    "element": <div>
      home
    </div>,
    "key": "home",
    "path": "/",
  },
  {
    "element": <div>
      userCenter
    </div>,
    "key": "userCenter",
    "path": "userCenter",
  },
  {
    "element": <div>
      system
    </div>,
    "key": "system",
    "path": "system",
  },
  {
    "element": <div>
      cloudBeaver
    </div>,
    "key": "cloudBeaver",
    "path": "cloudBeaver",
  },
  {
    "element": <div>
      account
    </div>,
    "key": "account",
    "path": "account",
  },
  {
    "children": [
      {
        "element": <div>
          member
        </div>,
        "key": "member",
        "path": ":projectID/member",
      },
      {
        "children": [
          {
            "element": <div>
              dataSourceList
            </div>,
            "key": "dataSourceList",
            "path": "",
          },
          {
            "element": <div>
              dataSourceCreate
            </div>,
            "key": "dataSourceCreate",
            "path": "create",
          },
          {
            "element": <div>
              dataSourceUpdate
            </div>,
            "key": "dataSourceUpdate",
            "path": "update/:dbServiceUid",
          },
        ],
        "element": <div
          data-test-parent-id="dataSource"
        >
          <Outlet />
        </div>,
        "key": "dataSource",
        "path": ":projectID/db-services",
      },
      {
        "element": <div>
          syncDataSource
        </div>,
        "key": "syncDataSource",
        "path": ":projectID/syncDataSource",
      },
      {
        "element": <div>
          dataExportManagement
        </div>,
        "key": "dataExportManagement",
        "path": ":projectID/data/export",
      },
    ],
    "element": <UNDEFINED />,
    "key": "projectDetail",
    "path": "project/*",
  },
]
`;

exports[`base/router-base-ce render base router when version is ce render router account 1`] = `
<body>
  <div>
    <div>
      account
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router cloudBeaver 1`] = `
<body>
  <div>
    <div>
      cloudBeaver
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router home 1`] = `
<body>
  <div>
    <div>
      home
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router project render route dataSourceCreate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataSource"
    >
      <div>
        dataSourceCreate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router project render route dataSourceList 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataSource"
    >
      <div>
        dataSourceList
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router project render route dataSourceUpdate 1`] = `
<body>
  <div>
    <div
      data-test-parent-id="dataSource"
    >
      <div>
        dataSourceUpdate
      </div>
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router project render route member 1`] = `
<body>
  <div>
    <div>
      member
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router system 1`] = `
<body>
  <div>
    <div>
      system
    </div>
  </div>
</body>
`;

exports[`base/router-base-ce render base router when version is ce render router userCenter 1`] = `
<body>
  <div>
    <div>
      userCenter
    </div>
  </div>
</body>
`;
